# cpp_rapidcheck

./: .gitignore  README.org
app/: CMakeLists.txt  jamfile  main.cpp
lib/: CMakeLists.txt  jamfile
lib/lib/: lib.cpp  lib.hpp  lib.test.cpp  lib_test_support.cpp  lib_test_support.hpp
